--- a/src/cloudsc_fortran/CMakeLists.txt
+++ b/src/cloudsc_fortran/CMakeLists.txt
@@ -4,20 +4,23 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
 find_package( OpenMP COMPONENTS Fortran )
 find_package( Serialbox )
 
+# Define this dwarf variant as an ECBuild feature
+ecbuild_add_option( FEATURE CLOUDSC_FORTRAN
+    DESCRIPTION "Build the new Fortran version CLOUDSC using Serialbox" DEFAULT ON
+)
+
 # Add option for single-precision builds
-ecbuild_add_option(
-    FEATURE SINGLE_PRECISION
+ecbuild_add_option( FEATURE SINGLE_PRECISION
     DESCRIPTION "Build CLOUDSC in single precision" DEFAULT OFF
 )
 if( HAVE_SINGLE_PRECISION )
   list(APPEND CLOUDSC_DEFINITIONS SINGLE)
 endif()
 
+if( HAVE_CLOUDSC_FORTRAN )
 
-if( Serialbox_FOUND AND SERIALBOX_HAS_FORTRAN )
-
-    ecbuild_add_executable(
-        TARGET dwarf-cloudsc-fortran
+    # Define the binary build target for this variant
+    ecbuild_add_executable( TARGET dwarf-cloudsc-fortran
         SOURCES
             dwarf_cloudsc.F90
             cloudsc_global_state_mod.F90
@@ -25,17 +28,13 @@ if( Serialbox_FOUND AND SERIALBOX_HAS_FORTRAN )
             cloudsc.F90
         DEFINITIONS ${CLOUDSC_DEFINITIONS}
     )
-    target_link_libraries(
-        dwarf-cloudsc-fortran
-	PRIVATE
-            cloudsc-common-lib
-            OpenMP::OpenMP_Fortran
-    )
+    target_link_libraries( dwarf-cloudsc-fortran PRIVATE cloudsc-common-lib )
+
+    if( OpenMP_Fortran_FOUND )
+        target_link_libraries( dwarf-cloudsc-fortran PRIVATE OpenMP::OpenMP_Fortran )
+    endif()
 
     # Create symlink for the input data
     execute_process(COMMAND ${CMAKE_COMMAND} -E create_symlink
         ${CMAKE_CURRENT_SOURCE_DIR}/../../data ${CMAKE_CURRENT_BINARY_DIR}/../../../data )
-
-else()
-    message(STATUS "Serialbox not found, disabling prototype2" )
 endif()
