GPU: Add a manually modified CLAW-based GPU kernel
Manual modifications of the added kernel include:
* explicit loop blocking at the gang level
* removal of some unused diagnostic variables
* driver pre-localizes all data to device out of timed loop (no PCIe)

--- a/bundle.yml
+++ b/bundle.yml
@@ -55,6 +55,10 @@ options :
         help  : Build the naive GPU version CLOUDSC (!$acc kernels) [ON|OFF]
         cmake : ENABLE_CLOUDSC_GPU_NAIVE={{value}}
 
+    - cloudsc-gpu-claw :
+        help  : Build the optimized CLAW-based GPU version CLOUDSC  [ON|OFF]
+        cmake : ENABLE_CLOUDSC_GPU_CLAW={{value}}
+
     - without-serialbox :
         help  : Disable Serialbox utility for platform-agnostic file I/O
         cmake : CMAKE_DISABLE_FIND_PACKAGE_Serialbox=TRUE
