--- a/bundle.yml
+++ b/bundle.yml
@@ -39,6 +39,12 @@ options :
         help  : Enable single precision build of the dwarf
         cmake : ENABLE_SINGLE_PRECISION=ON
 
+    - with-gpu :
+        help  : Enable GPU kernel (naive and CLAW-based)
+        cmake : >
+            ENABLE_CLOUDSC_GPU_NAIVE=ON
+            ENABLE_CLOUDSC_GPU_CLAW=ON
+
     - cloudsc-prototype1 :
         help  : Build the original operational Fortran prototype [ON|OFF]
         cmake : ENABLE_CLOUDSC_PROTOTYPE1={{value}}
