--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,3 +3,4 @@ add_subdirectory(common)
 add_subdirectory(cloudsc_fortran)
 add_subdirectory(cloudsc_c)
 add_subdirectory(cloudsc_gpu)
+add_subdirectory(cloudsc_loki)
