--- a/bundle.yml
+++ b/bundle.yml
@@ -49,6 +49,10 @@ options :
         help  : Enable Loki/CLAW source-to-source transformations
         cmake : ENABLE_CLOUDSC_LOKI=ON
 
+    - loki-frontend :
+        help  : Frontend parser to use for Loki transformations
+        cmake : LOKI_FRONTEND={{value}}
+
     - cloudsc-prototype1 :
         help  : Build the original operational Fortran prototype [ON|OFF]
         cmake : ENABLE_CLOUDSC_PROTOTYPE1={{value}}
