Bundle: Tweaks to CMake configurations and .gitignore

--- a/src/cloudsc_c/CMakeLists.txt
+++ b/src/cloudsc_c/CMakeLists.txt
@@ -1,9 +1,10 @@
 # Define this dwarf variant as an ECBuild feature
 ecbuild_add_option( FEATURE CLOUDSC_C
     DESCRIPTION "Build the C version CLOUDSC using Serialbox" DEFAULT ON
+    CONDITION Serialbox_FOUND
 )
 
-if( HAVE_CLOUDSC_C AND Serialbox_FOUND )
+if( HAVE_CLOUDSC_C )
 
     ecbuild_add_library(
         TARGET dwarf-cloudsc-c-lib
@@ -23,9 +24,10 @@ if( HAVE_CLOUDSC_C AND Serialbox_FOUND )
 	    cloudsc/mycpu.h
 	    cloudsc/mycpu.c
     )
-    target_link_libraries( dwarf-cloudsc-c-lib PRIVATE
-                           Serialbox::Serialbox_C
-                           OpenMP::OpenMP_C )
+    target_link_libraries( dwarf-cloudsc-c-lib PRIVATE Serialbox::Serialbox_C )
+    if( TARGET OpenMP::OpenMP_C )
+        target_link_libraries( dwarf-cloudsc-c-lib PRIVATE OpenMP::OpenMP_C )
+    endif()
     target_include_directories( dwarf-cloudsc-c-lib PUBLIC $<INSTALL_INTERFACE:include> )
     target_include_directories( dwarf-cloudsc-c-lib PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/cloudsc> )
 
